force-app/main/default/objects/MY_Contact__c/MY_Contact__c.object-meta.xml
<CustomObject>
    <label>MY Contact</label>
    <nameField>
        <label>MY Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MY Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>