force-app/main/default/objects/MY_Contact__c/fields/addr_city__c.field-meta.xml
<CustomField>
    <fullName>addr_city__c</fullName>
    <label>Addr City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>