force-app/main/default/objects/MY_Contact__c/fields/addr_country__c.field-meta.xml
<CustomField>
    <fullName>addr_country__c</fullName>
    <label>Addr_Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>