force-app/main/default/objects/MY_Contact__c/fields/addr_postalcode__c.field-meta.xml
<CustomField>
    <fullName>addr_postalcode__c</fullName>
    <label>Addr_PostalCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>