force-app/main/default/objects/MY_Contact__c/fields/BR_CurrPrevBrandID__c.field-meta.xml
<CustomField>
    <fullName>BR_CurrPrevBrandID__c</fullName>
    <label>BR_CurrPrevBrandID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>