force-app/main/default/objects/MY_Contact__c/fields/BR_CurrPrevBrandName__c.field-meta.xml
<CustomField>
    <fullName>BR_CurrPrevBrandName__c</fullName>
    <label>BR_CurrPrevBrandName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>