force-app/main/default/objects/MY_Contact__c/fields/BR_MemberExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>BR_MemberExpiryDate__c</fullName>
    <label>BR_MemberExpiryDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>