force-app/main/default/objects/MY_Contact__c/fields/BR_MemberID__c.field-meta.xml
<CustomField>
    <fullName>BR_MemberID__c</fullName>
    <label>BR_MemberID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>