force-app/main/default/objects/MY_Contact__c/fields/BR_MemberStartDate__c.field-meta.xml
<CustomField>
    <fullName>BR_MemberStartDate__c</fullName>
    <label>BR_MemberStartDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>