force-app/main/default/objects/MY_Contact__c/fields/BR_MemberStatus__c.field-meta.xml
<CustomField>
    <fullName>BR_MemberStatus__c</fullName>
    <label>BR_MemberStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>