force-app/main/default/objects/MY_Contact__c/fields/Channel_ChannelRefNo__c.field-meta.xml
<CustomField>
    <fullName>Channel_ChannelRefNo__c</fullName>
    <label>Channel_ChannelRefNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>