force-app/main/default/objects/MY_Contact__c/fields/Channel_OutletName__c.field-meta.xml
<CustomField>
    <fullName>Channel_OutletName__c</fullName>
    <label>Channel_OutletName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>