force-app/main/default/objects/MY_Contact__c/fields/child_gender__c.field-meta.xml
<CustomField>
    <fullName>child_gender__c</fullName>
    <label>Child_Gender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>