force-app/main/default/objects/MY_Contact__c/fields/contact_dob__c.field-meta.xml
<CustomField>
    <fullName>contact_dob__c</fullName>
    <label>Contact_DOB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>