force-app/main/default/objects/MY_Contact__c/fields/contact_donotcall__c.field-meta.xml
<CustomField>
    <fullName>contact_donotcall__c</fullName>
    <label>Contact_DoNotCall</label>
    <length>10</length>
    <type>Text</type>
</CustomField>