force-app/main/default/objects/MY_Contact__c/fields/contact_emailoptout__c.field-meta.xml
<CustomField>
    <fullName>contact_emailoptout__c</fullName>
    <label>Contact_EmailOptOut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>