force-app/main/default/objects/MY_Contact__c/fields/contact_otherphone__c.field-meta.xml
<CustomField>
    <fullName>contact_otherphone__c</fullName>
    <label>Contact_OtherPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>