force-app/main/default/objects/MY_Contact__c/fields/contact_weeksofpregnancy__c.field-meta.xml
<CustomField>
    <fullName>contact_weeksofpregnancy__c</fullName>
    <label>Contact_WeeksOfPregnancy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>