force-app/main/default/objects/MY_Contact__c/fields/cr_channelname__c.field-meta.xml
<CustomField>
    <fullName>cr_channelname__c</fullName>
    <label>CR_ChannelName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>