force-app/main/default/objects/MY_Contact__c/fields/cr_promotername__c.field-meta.xml
<CustomField>
    <fullName>cr_promotername__c</fullName>
    <label>CR_PromoterName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>