force-app/main/default/objects/MY_Contact__c/fields/CR_UTMMedium__c.field-meta.xml
<CustomField>
    <fullName>CR_UTMMedium__c</fullName>
    <label>CR_UTMMedium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>