force-app/main/default/objects/MY_Contact__c/fields/CR_UTMTerm__c.field-meta.xml
<CustomField>
    <fullName>CR_UTMTerm__c</fullName>
    <label>CR_UTMTerm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>