force-app/main/default/objects/MY_Contact__c/fields/member_expirydate__c.field-meta.xml
<CustomField>
    <fullName>member_expirydate__c</fullName>
    <label>Member_ExpiryDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>