force-app/main/default/objects/MY_Contact__c/fields/member_id__c.field-meta.xml
<CustomField>
    <fullName>member_id__c</fullName>
    <label>Member_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>