force-app/main/default/objects/MY_Contact__c/fields/member_status__c.field-meta.xml
<CustomField>
    <fullName>member_status__c</fullName>
    <label>Member_Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>