force-app/main/default/objects/MY_Contact__c/fields/SourceCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>SourceCreatedDate__c</fullName>
    <label>Source Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>