force-app/main/default/objects/MY_Contact__c/fields/sourceid__c.field-meta.xml
<CustomField>
    <fullName>sourceid__c</fullName>
    <label>SourceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>