force-app/main/default/objects/MY_Contact__c/validationRules/Required_BR.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_BR</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(br_brandid__c )</errorConditionFormula>
    <errorMessage>BR BrandID is required</errorMessage>
</ValidationRule>