force-app/main/default/objects/MY_Contact__c/validationRules/Required_BRName.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_BRName</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( br_brandname__c )</errorConditionFormula>
    <errorMessage>BR BrandName is required</errorMessage>
</ValidationRule>