force-app/main/default/objects/MY_Contact__c/validationRules/Required_Channel_ChannelRefNo.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Channel_ChannelRefNo</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(   Channel_ChannelRefNo__c )</errorConditionFormula>
    <errorMessage>Channel ChannelRefNo  is required</errorMessage>
</ValidationRule>