force-app/main/default/objects/MY_Contact__c/validationRules/Valid_DoNotCall.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_DoNotCall</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( CONTAINS(&apos;true&apos;, LOWER(contact_donotcall__c) ), 
CONTAINS(&apos;false&apos;, LOWER(contact_donotcall__c) ), 
ISBLANK(contact_donotcall__c) 
) )</errorConditionFormula>
    <errorMessage>Only True,False or blank are allowed</errorMessage>
</ValidationRule>