force-app/main/default/objects/MY_Contact__c/validationRules/Valid_Gender.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Gender</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( CONTAINS(&apos;male&apos;, LOWER(contact_gender__c) ), 
CONTAINS(&apos;female&apos;, LOWER(contact_gender__c) ), 
CONTAINS(&apos;n/a&apos;, LOWER(contact_gender__c) ), 
ISBLANK(contact_gender__c) 
) )</errorConditionFormula>
    <errorMessage>Only Male|Female|N/A are allowed</errorMessage>
</ValidationRule>